--- a/css/login.css
+++ b/css/login.css
@@ -11,13 +11,48 @@
  display: grid;
  justify-content: center;
  align-items: center;
+ 
+
 }
 
+input{
+    display: grid;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+
+ 
+}
 
 
 h3{
     text-align: center;
+    margin-top: 20px;
+    
 }
+
+form{
+    display: grid;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    width: 400px;
+    height: 300px;
+    
+    
+}
+
+.input-bt{
+    margin: 10px;
+}
+
+
+.grid-caixa{
+    display: grid;
+    justify-content: center;
+    align-items: center;
+}
+
+
+
 
 
 
